--- a/pjtsite/pjtapp/templates/home.html
+++ b/pjtsite/pjtapp/templates/home.html
@@ -35,5 +35,11 @@
         });
       }
     </script>
+    <div class="container">
+      <div class="center">
+        <button class="button">Upload new Order Items</button>
+        <button class="button">Upload new Print Models</button>
+      </div>
+    </div>
   </body>
 </html>
