--- a/pjtsite/pjtapp/templates/uploadprintdata.html
+++ b/pjtsite/pjtapp/templates/uploadprintdata.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{%static 'style.css'%}" />
   </head>
   <body>
-    <h1>Upload Orders</h1>
+    <h1>Upload Print Models</h1>
     <div class="container-2">
       {% comment %} CHANGE TO FORMS {% endcomment %}      
       <div class="box-1">
