--- a/pjtsite/pjtapp/templates/uploadorders.html
+++ b/pjtsite/pjtapp/templates/uploadorders.html
@@ -10,18 +10,19 @@
   <body>
     <h1>Upload Orders</h1>
     <div class="container-2"> 
-      {% comment %} CHANGE TO FORMS {% endcomment %}
-      <div class="box-1">
-        <label for "ordersfile">Select an Orders CSV File:</label>
-        <input type="file" id="ordersfile" name="ordersfile" accept=".csv">
-      </div>
-      <div class="box-2">
-        <label for "orderitemsfile">Select an Order Items CSV File:</label>
-        <input type="file" id="orderitemsfile" name="orderitemsfile" accept=".csv">
-      </div>
-      <div class="box-3">
-        <button>Submit</button>
-      </div>
+      <form>
+        <div class="box-1">
+          <label for "ordersfile">Select an Orders CSV File:</label>
+          <input type="file" id="ordersfile" name="ordersfile" accept=".csv">
+        </div>
+        <div class="box-2">
+          <label for "orderitemsfile">Select an Order Items CSV File:</label>
+          <input type="file" id="orderitemsfile" name="orderitemsfile" accept=".csv">
+        </div>
+        <div class="box-3">
+          <input type= "submit" name = submit value = "Submit"/>
+      </form>
+    </div>
     </div>
   </body>
 </html>
