--- a/pjtsite/pjtapp/templates/uploadprintdata.html
+++ b/pjtsite/pjtapp/templates/uploadprintdata.html
@@ -10,18 +10,19 @@
   <body>
     <h1>Upload Print Models</h1>
     <div class="container-2">
-      {% comment %} CHANGE TO FORMS {% endcomment %}      
-      <div class="box-1">
-        <label for "ordersfile">Select Print File Data CSV File:</label>
-        <input type="file" id="ordersfile" name="ordersfile" accept=".csv">
-      </div>
-      <div class="box-2">
-        <label for "orderitemsfile">Select an Print Models CSV File:</label>
-        <input type="file" id="orderitemsfile" name="orderitemsfile" accept=".csv">
-      </div>
-      <div class="box-3">
-        <button>Submit</button>
-      </div>
+      <form id="orderfilesform" action=''>
+          <div class="box-1">
+            <label for "ordersfile">Select Print File Data CSV File:</label>
+            <input type="file" id="ordersfile" name="ordersfile" accept=".csv">
+          </div>
+          <div class="box-2">
+            <label for "orderitemsfile">Select an Print Models CSV File:</label>
+            <input type="file" id="orderitemsfile" name="orderitemsfile" accept=".csv">
+          </div>
+          <div class="box-3">
+            <input type= "submit" name = submit value = "Submit"/>
+          </div>
+      </form>
     </div>
   </body>
 </html>
