--- a/pjtsite/pjtapp/templates/home.html
+++ b/pjtsite/pjtapp/templates/home.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Test PJT</title>
-  
+    {% comment %} CSS defs {% endcomment %}
     {% comment %} bootstrap {% endcomment %}
     <link
       rel="stylesheet"
@@ -15,6 +15,7 @@
     />
 
     <link rel="stylesheet" href="{%static 'style.css'%}" />
+    {% comment %} CSS defs {% endcomment %}
   </head>
   <body>
     <h1>Home Page</h1>
