--- a/pjtsite/pjtapp/templates/home.html
+++ b/pjtsite/pjtapp/templates/home.html
@@ -20,17 +20,24 @@
   <body>
     <h1>Home Page</h1>
     <div class="container p-3">
-      {% for j in ordersSet %}
+    {% for j in ojoinoi %}
       <button type="button" class="collapsible">
+        <div align="right">
+          <a href="details" class="button button2">Order Details</a>
+        </div>
         {%if j.OrderCompleted == 0%} <input type="checkbox" />{% endif %}
         OrderID: {{j.OrdersID}}, Full Name: {{ j.FullName}}, Order Date:
-        {{j.SaleDate}}, Ship Date: {{j.RequiredShipDate}}
+        {{j.SaleDate}}, Ship Date: {{j.RequiredShipDate}} 
       </button>
-
+      {% for oi in ojoinoi %}
       <div class="content">
-        <p>OrdersID: {{id}}</p>
+          <p><br>
+          Order Item: {{oi.ItemSKU}}   
+          </p>
       </div>
       {% endfor %}
+
+    {% endfor %}
     <script>
       var coll = document.getElementsByClassName("collapsible");
       var i;
@@ -71,6 +78,8 @@
     </script>
     -->
     {% comment %} {% for j in OrderItemsList %} {% endfor %} {% endcomment %}
+
+
     <div class="container">
       <div class="center">
         <a href="uploadorders" class="button">Upload new Orders</a>
