--- a/pjtsite/assets/style.css
+++ b/pjtsite/assets/style.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #0f121f;
-  color: #fff;
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
 }
 
 body * {
@@ -24,7 +24,7 @@ a:visited {
 }
 
 .collapsible {
-  background-color: #454f7c;
+  background-color: #4b5dac;
   color: rgb(255, 255, 255);
   cursor: pointer;
   padding: 18px;
@@ -37,14 +37,15 @@ a:visited {
 
 .active,
 .collapsible:hover {
-  background-color: #293357;
+  background-color: #5265a8;
 }
 
 .content {
   padding: 0 18px;
   display: none;
   overflow: hidden;
-  background-color: #1d2133;
+  background-color: #3e4d8f;
+  color: rgb(255, 255, 255);
 }
 
 .container {
@@ -62,7 +63,7 @@ a:visited {
 }
 a.button {
   appearance: button;
-  background-color: #008caf;
+  background-color: #b8f1ff;
   border: none;
   color: rgb(0, 0, 0);
   padding: 15px 32px;
