--- a/pjtsite/assets/style.css
+++ b/pjtsite/assets/style.css
@@ -100,3 +100,12 @@ a.button {
 .button2 {
   border-radius: 50%;
 }
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: lightcoral;
+  color: white;
+  text-align: center;
+}
